fix alignment of search in modal

--- a/client/assets/styles/scss/modals/modals-getting-started-step-1.scss
+++ b/client/assets/styles/scss/modals/modals-getting-started-step-1.scss
@@ -12,7 +12,7 @@
 
   .input-search {
     background-position: 93px 3px;
-    margin: 3px auto 15px;
+    margin: 0 auto 15px;
     padding-left: 115px;
   }
 
