--- a/client/assets/styles/scss/modals/modals.scss
+++ b/client/assets/styles/scss/modals/modals.scss
@@ -61,7 +61,7 @@
     padding-left: 136px;
     position: relative;
     top: 8px;
-    width: calc(100% - 18px);
+    width: calc(100% - 12px);
 
     &:hover,
     &:focus,
